Restrict crostini UI to primary profile

Crostini multiprofile support is going to wait until the successor for
multiprofile is landed on ChromeOS. Until then, we restrict Crostini to the
primary (i.e. first signed in) profile per session. This means that you can
still have Linux containers per profile, but to use then you need to sign out
then sign in to the desired profile.

Note, this prevents UI from being shown to the non-primary profile. It doesn't
prevent non-primary users from using crosh and vmc.

Bug: 842561
Change-Id: I119359b332e7a3afa02071c1e9d9e6f41164fe4d
Reviewed-on: https://chromium-review.googlesource.com/1058738
Commit-Queue: Nicholas Verne <nverne@chromium.org>
Reviewed-by: Timothy Loh <timloh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558627}
Former-commit-id: 3d79d513758271479430816a5db15a5a414901b1